# sample-poetry-project

./: .pre-commit-config.yaml  pyproject.toml  sales_data.csv
sample_poetry_project/: sales.py
tests/: __init__.py
